# bankpromos

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  a  bankpromos.db  check_sources.py  deploy_verify.py  pyproject.toml  railway.json  requirements.txt  test_continental.py  test_debug.py  test_final.py  test_keys.py  test_pdf_collect.py  test_ql.py  test_storage.py
.github/workflows/: ci.yml  (+2 more)
bankpromos/: __init__.py  __main__.py  analytics_service.py  api.py  cache.py  cli.py  config.py  corrections_service.py  curated_service.py  data_service.py  date_utils.py  exporter.py  fuel_prices.py  fuel_query.py  models.py  pdf_ai_parser.py  pdf_classifier.py  pdf_debug.py  pdf_parser.py  preferences_service.py  preview_service.py  qa.py  query_engine.py  ranking_service.py  run_all.py  storage.py  summary_service.py  ui_output.py  visual_learning.py
data/: analytics_events.jsonl  bankpromos.db  cli_test.db  cli_test3.db  collectors.db  curated_promotions.json  phase2.db  phase4.db  phase4_ai.db  phase4_auto.db  phase5.db  phase7.db  pipeline.db  pipeline3.db  qa_promotions_report.csv  review_items.json  test.db  test2.db  validate.db  visual_patterns.json
docs/: README.md  admin.html  admin.js  ai-control.html  app.js  index.html  styles.css
frontend/: README.md  app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_bnf.py  test_cache.py  test_continental.py  test_data_quality.py  test_data_service.py  test_fuel_prices.py  test_fuel_query.py  test_itau.py  test_runner.py  test_storage.py  test_sudameris.py  test_ueno.py
(+35 files in other folders)
