[project]
name = "bankpromos"
version = "0.1.0"
description = "Scraper de promociones y beneficios bancarios de Paraguay"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "tabulate>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "requests>=2.28.0",
    "httpx>=0.25.0",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bankpromos"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100